admission_controller/admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "python-example-webhook"
webhooks:
- name: "python.example.webhook"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["configmaps"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "python-example-webhook"
    caBundle: placeholder
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-example-webhook
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-example-webhook
  template:
    metadata:
      labels:
        app: python-example-webhook
    spec:
      containers:
        - name: controller
          image: capricornpl/controller:1.6.16
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: tls-volume
              mountPath: /etc/tls
      volumes:
        - name: tls-volume
          secret:
            secretName: tls-secret
---
apiVersion: v1
kind: Service
metadata:
  name: python-example-webhook
  namespace: default
spec:
  selector:
    app: python-example-webhook
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8000
